unpackaged/main/default/objects/SFSC_CaseActivity__mdt/SFSC_CaseActivity__mdt.object-meta.xml
<CustomObject>
    <description>Define the Case &quot;Activity&quot; field (CS or CC) according to the customer service Email contacted by the customer</description>
    <label>SFSC - CaseActivity</label>
    <pluralLabel>SFSC - CaseActivities</pluralLabel>
</CustomObject>