unpackaged/main/default/objects/SFSC_CaseActivity__mdt/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <description>Customer Service / Customer Care</description>
    <inlineHelpText>CS - Customer Service | CC - Customer Care</inlineHelpText>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS</fullName>
                <default>true</default>
                <label>CS</label>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>