unpackaged/main/default/objects/SFSC_CaseActivity__mdt/fields/Hub_Phone__c.field-meta.xml
<CustomField>
    <fullName>Hub_Phone__c</fullName>
    <label>Hub Phone</label>
    <type>Phone</type>
</CustomField>