unpackaged/main/default/objects/SFSC_CaseActivity__mdt/fields/HubEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>HubEmailAddress__c</fullName>
    <label>Hub Email Address</label>
    <type>Email</type>
</CustomField>