unpackaged/main/default/objects/SFSC_CaseActivity__mdt/fields/Is_Default_Hub__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Hub__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define for each Hub which one is the default hub.
If checked this hub is the default hub</description>
    <inlineHelpText>If checked this hub is the default hub</inlineHelpText>
    <label>Is Default Hub</label>
    <type>Checkbox</type>
</CustomField>