unpackaged/main/default/objects/SFSC_CaseActivity__mdt/fields/Is_Default_sending_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_sending_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default sending Email</label>
    <type>Checkbox</type>
</CustomField>