unpackaged/main/default/objects/SFSC_CaseActivity__mdt/fields/Market_Zone__c.field-meta.xml
<CustomField>
    <fullName>Market_Zone__c</fullName>
    <label>Market Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UAE</fullName>
                <default>true</default>
                <label>UAE</label>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>