unpackaged/main/default/objects/SFSC_CaseActivity__mdt/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <description>Filed used in the before save flow to update Hub Handle whne the case is assigned to a Queue.
The picklists must contains the correct  Queue Names</description>
    <label>Queue Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rimowa - CC - BRASP1</fullName>
                <default>true</default>
                <label>Rimowa - CC - BRASP1</label>
            </value>
            <value>
                <fullName>Rimowa - CS - BRA</fullName>
            </value>
            <value>
                <fullName>Rimowa - CC - JAPOS1</fullName>
            </value>
            <value>
                <fullName>Rimowa - CS - JPN</fullName>
            </value>
            <value>
                <fullName>Rimowa - Admin - JAPOS1</fullName>
            </value>
            <value>
                <fullName>Rimowa - Admin - JPN</fullName>
            </value>
            <value>
                <fullName>Rimowa - CS&amp;CC - KOR</fullName>
            </value>
            <value>
                <fullName>Rimowa - MX - US</fullName>
            </value>
            <value>
                <fullName>Rimowa - CS - US</fullName>
            </value>
            <value>
                <fullName>Rimowa - CC - USATO1</fullName>
            </value>
            <value>
                <fullName>Rimowa - CC - USANY1</fullName>
            </value>
            <value>
                <fullName>Rimowa - CA - US</fullName>
            </value>
            <value>
                <fullName>Rimowa - Admin - US</fullName>
            </value>
            <value>
                <fullName>DEUKO1 - ADMIN</fullName>
            </value>
            <value>
                <fullName>DEUKO1 - Customer Care</fullName>
            </value>
            <value>
                <fullName>EU - ADMIN</fullName>
            </value>
            <value>
                <fullName>EU - Customer Service</fullName>
            </value>
            <value>
                <fullName>UAE - Customer Service</fullName>
            </value>
            <value>
                <fullName>AUS Customer Care</fullName>
            </value>
            <value>
                <fullName>AUS Customer Service</fullName>
            </value>
            <value>
                <fullName>AUS - ADMIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>