unpackaged/main/default/objects/SFSC_CaseActivity__mdt/fields/Send_Email_to_customer__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_to_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email to customer</label>
    <type>Checkbox</type>
</CustomField>