unpackaged/main/default/objects/SFSC_CaseActivity__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Queue_Name__c</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Activity__c</columns>
    <columns>Country__c</columns>
    <columns>Hub__c</columns>
    <columns>HubEmailAddress__c</columns>
    <columns>Hub_Phone__c</columns>
    <columns>Is_Default_Hub__c</columns>
    <columns>Market_Zone__c</columns>
    <columns>Send_Email_to_customer__c</columns>
    <columns>Is_Default_sending_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>